--- a/nes.html
+++ b/nes.html
@@ -3,10 +3,10 @@
 
 	<head>
 		<title>NES Controller</title>
-		<link href='./nes.css' rel="stylesheet">
+		<link href='./nes.css' rel='stylesheet'>
 	</head>
 
-	<body>
+	<body class='preload'>
 		<div id='container'>
 			<img src='./cloud.png'>
 			<div class='bottom'></div>
@@ -33,8 +33,16 @@
 			<div class='inlay circle b'>
 				<div class='button text'>A</div>
 			</div>
-			<div class='button circle a'></div>
-			<div class='button circle b'></div>
+			<div class='button circle parent a'>
+				<div class='button circle a base'></div>
+				<div class='button circle a shaft'></div>
+				<div class='button circle a face'></div>
+			</div>
+			<div class='button circle parent b'>
+				<div class='button circle b base'></div>
+				<div class='button circle b shaft'></div>
+				<div class='button circle b face'></div>
+			</div>
 		</div>
 	</body>
 
