--- a/nes.html
+++ b/nes.html
@@ -6,43 +6,13 @@
 		<link href='./nes.css' rel='stylesheet'>
 	</head>
 
-	<body class='preload'>
-		<div id='container'>
-			<img src='./cloud.png'>
-			<div class='bottom'></div>
-			<div class='controller'></div>
+	<body>
+		<div id='gamepad'>
 			<div class='cord'></div>
-			<div class='face'></div>
-			<div class='inlay dpad wide'></div>
-			<div class='inlay dpad tall'></div>
-			<div class='button dpad wide'></div>
-			<div class='button dpad tall'></div>
-			<div class='flourish a'></div>
-			<div class='flourish b'></div>
-			<div class='flourish c'></div>
-			<div class='inlay menu'></div>
-			<div class='menu text start'>START</div>
-			<div class='menu text select'>SELECT</div>
-			<div class='button squish start'></div>
-			<div class='button squish select'></div>
-			<div class='flourish d'></div>
-			<div class='logo text'>Nintendo<small>©</small></div>
-			<div class='inlay circle a'>
-				<div class='button text'>B</div>
+			<div class='gamepad-body'>
+				<div class='gamepad-face'></div>
 			</div>
-			<div class='inlay circle b'>
-				<div class='button text'>A</div>
-			</div>
-			<div class='button circle parent a'>
-				<div class='button circle a base'></div>
-				<div class='button circle a shaft'></div>
-				<div class='button circle a face'></div>
-			</div>
-			<div class='button circle parent b'>
-				<div class='button circle b base'></div>
-				<div class='button circle b shaft'></div>
-				<div class='button circle b face'></div>
-			</div>
+			<div class='gamepad-body depth'></div>
 		</div>
 	</body>
 
