fixing up sass variables

--- a/nes.html
+++ b/nes.html
@@ -31,9 +31,10 @@
 
 					<div class='dpad hori depth'></div>
 					<div class='dpad vert depth'></div>
-
-					<div class='dpad hori'></div>
-					<div class='dpad vert'></div>
+					<div class='dpad-group'>
+						<div class='dpad hori'></div>
+						<div class='dpad vert'></div>
+					</div>
 
 				</div>
 			</div>
