the buttons now are pressable

--- a/nes.html
+++ b/nes.html
@@ -12,22 +12,29 @@
 			<div class='gamepad-body depth'></div>
 			<div class='gamepad-body'>
 				<div class='gamepad-face'>
-					<div class='button a base'></div>
-					<div class='button a depth'></div>
-					<div class='button a'></div>
+					<div class='button-group'>
+						<div class='button a base'></div>
+						<div class='button a depth'></div>
+						<div class='button a'></div>
+					</div>
 
-					<div class='button b base'></div>
-					<div class='button b depth'></div>
-					<div class='button b'></div>
+					<div class='button-group'>
+						<div class='button b base'></div>
+						<div class='button b depth'></div>
+						<div class='button b'></div>
+					</div>
 
+					<div class='menu-group'>
+						<div class='menu start base'></div>
+						<div class='menu start depth'></div>
+						<div class='menu start'></div>
+					</div>
 
-					<div class='menu start base'></div>
-					<div class='menu start depth'></div>
-					<div class='menu start'></div>
-
-					<div class='menu select base'></div>
-					<div class='menu select depth'></div>
-					<div class='menu select'></div>
+					<div class='menu-group'>
+						<div class='menu select base'></div>
+						<div class='menu select depth'></div>
+						<div class='menu select'></div>
+					</div>
 
 					<div class='dpad hori depth'></div>
 					<div class='dpad vert depth'></div>
@@ -35,7 +42,6 @@
 						<div class='dpad hori'></div>
 						<div class='dpad vert'></div>
 					</div>
-
 				</div>
 			</div>
 		</div>
