--- a/nes.html
+++ b/nes.html
@@ -12,18 +12,27 @@
 			<div class='gamepad-body depth'></div>
 			<div class='gamepad-body'>
 				<div class='gamepad-face'>
+
+					<div class='filigree list-1'></div>
+					<div class='filigree list-2'></div>
+					<div class='filigree list-3'></div>
+					<div class='filigree list-4'></div>
+
+					<div class='button-plate a'></div>
 					<div class='button-group'>
 						<div class='button a base'></div>
 						<div class='button a depth'></div>
 						<div class='button a'></div>
 					</div>
 
+					<div class='button-plate b'></div>
 					<div class='button-group'>
 						<div class='button b base'></div>
 						<div class='button b depth'></div>
 						<div class='button b'></div>
 					</div>
 
+					<div class='menu-plate'></div>
 					<div class='menu-group'>
 						<div class='menu start base'></div>
 						<div class='menu start depth'></div>
@@ -42,6 +51,7 @@
 						<div class='dpad hori'></div>
 						<div class='dpad vert'></div>
 					</div>
+
 				</div>
 			</div>
 		</div>
